--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "@bytemd/plugin-gfm": "^1.21.0",
     "@bytemd/plugin-highlight": "^1.21.0",
     "@bytemd/vue-next": "^1.21.0",
+    "@juggle/resize-observer": "^3.4.0",
     "axios": "^1.6.8",
     "core-js": "^3.8.3",
+    "mobile-drag-drop": "^3.0.0-rc.0",
     "monaco-editor": "^0.47.0",
     "monaco-editor-webpack-plugin": "^7.1.0",
+    "resize-observer-polyfill": "^1.5.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
