--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.8",
     "core-js": "^3.8.3",
     "mobile-drag-drop": "^3.0.0-rc.0",
+    "moment": "^2.30.1",
     "monaco-editor": "^0.47.0",
     "monaco-editor-webpack-plugin": "^7.1.0",
     "resize-observer-polyfill": "^1.5.1",
